--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       document.getElementById('status').innerText = 'Processing...';
 
       try {
-        const response = await fetch('https://your-render-backend-url.com/process', {
+        const response = await fetch('https://backend-v2-6i8l.onrender.com/process', {
           method: 'POST',
           body: formData
         });
