--- a/index.html
+++ b/index.html
@@ -2,83 +2,54 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Utmatic PDF Processor</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 40px;
-      background-color: #f9f9f9;
-    }
-    label, select, input {
-      display: block;
-      margin: 10px 0;
-    }
-  </style>
+  <title>PDF Link Health Checker</title>
 </head>
 <body>
-  <h1>Utmatic PDF Processor</h1>
-  <form id="uploadForm" enctype="multipart/form-data">
-    <label for="pdf">Upload PDF:</label>
-    <input type="file" name="pdf" id="pdf" required>
-
-    <label for="mode">Mode:</label>
-    <select name="mode" id="mode" required>
-      <option value="utm-only">UTM Only</option>
-      <option value="hyperlink-utm">Hyperlink + UTM</option>
-    </select>
-
-    <label for="utm_source">UTM Source:</label>
-    <input type="text" name="utm_source" id="utm_source" required>
-
-    <label for="utm_medium">UTM Medium:</label>
-    <input type="text" name="utm_medium" id="utm_medium" required>
-
-    <label for="utm_campaign">UTM Campaign:</label>
-    <input type="text" name="utm_campaign" id="utm_campaign" required>
-
-    <div id="extraFields" style="display: none;">
-      <label for="base_url">Base URL:</label>
-      <input type="text" name="base_url" id="base_url">
-
-      <label for="item_format">Item Format (e.g., NNNN-LLLL):</label>
-      <input type="text" name="item_format" id="item_format">
-    </div>
-
-    <button type="submit">Submit</button>
+  <h1>PDF Link Health Checker</h1>
+  <form id="uploadForm">
+    <input type="file" id="pdfFile" accept="application/pdf" required>
+    <button type="submit">Check Links</button>
   </form>
-
-  <p id="status"></p>
-
+  <div id="result"></div>
   <script>
-    document.getElementById('mode').addEventListener('change', function () {
-      document.getElementById('extraFields').style.display =
-        this.value === 'hyperlink-utm' ? 'block' : 'none';
-    });
-
-    document.getElementById('uploadForm').addEventListener('submit', async function (e) {
+    document.getElementById('uploadForm').onsubmit = async function(e) {
       e.preventDefault();
-      const form = e.target;
-      const formData = new FormData(form);
-      document.getElementById('status').innerText = 'Processing...';
+      const fileInput = document.getElementById('pdfFile');
+      if (!fileInput.files.length) return;
+      const file = fileInput.files[0];
+
+      const formData = new FormData();
+      formData.append('file', file);
+
+      document.getElementById('result').innerHTML = "Processing...";
 
       try {
-        const response = await fetch('https://backend-v2-6i8l.onrender.com/process', {
+        const response = await fetch('/check_pdf_links', {
           method: 'POST',
           body: formData
         });
+        if (!response.ok) throw new Error('API error');
+        const data = await response.json();
 
-        if (!response.ok) throw new Error('Server error');
+        if (!data.links.length) {
+          document.getElementById('result').textContent = "No links found in PDF.";
+          return;
+        }
 
-        const blob = await response.blob();
-        const link = document.createElement('a');
-        link.href = window.URL.createObjectURL(blob);
-        link.download = 'processed.pdf';
-        link.click();
-        document.getElementById('status').innerText = 'Download started.';
+        let html = `<table border="1" cellpadding="5"><tr><th>URL</th><th>HTTP Status</th><th>Flags</th></tr>`;
+        for (const link of data.links) {
+          html += `<tr>
+            <td><a href="${link.url}" target="_blank">${link.url}</a></td>
+            <td>${link.http_status ?? ''}</td>
+            <td>${link.content_flags && link.content_flags.length ? link.content_flags.join(', ') : ''}</td>
+          </tr>`;
+        }
+        html += '</table>';
+        document.getElementById('result').innerHTML = html;
       } catch (err) {
-        document.getElementById('status').innerText = 'Error: ' + err.message;
+        document.getElementById('result').textContent = "Error: " + err.message;
       }
-    });
+    };
   </script>
 </body>
 </html>
